--- a/slcore/database/bricktemplate/qemu.mmio.yaml
+++ b/slcore/database/bricktemplate/qemu.mmio.yaml
@@ -39,13 +39,13 @@ mmio,generic:
       \ }}State *s = opaque; */\n}\n\nstatic uint64_t {{ name }}{{ id }}_read(void\
       \ *opaque, hwaddr offset, unsigned size)\n{\n    {{ machine_name|to_upper }}State\
       \ *s = opaque;\n    uint32_t res = 0;\n\n    switch (offset) {\n    default:\n\
-      \        qemu_log_mask(LOG_GUEST_ERROR, \"%s: Bad offset %\"HWADDR_PRIx\"\\\\\
+      \        qemu_log_mask(LOG_GUEST_ERROR, \"%s: Bad offset %\"HWADDR_PRIx\"\\\
       n\", __func__, offset);\n        return 0;\n    case {{ reg.size|to_offset }}:\n\
       \        res = s->{{ name }}{{ id }}_reserved[offset >> 2];\n        break;\n    }\n\
       \    return res;\n}\n\nstatic void {{ name }}{{ id }}_write(void *opaque, hwaddr\
       \ offset, uint64_t val, unsigned size)\n{\n    {{ machine_name|to_upper  }}State\
       \ *s = opaque;\n\n    switch (offset) {\n    default:\n        qemu_log_mask(LOG_GUEST_ERROR,\
-      \ \"%s: Bad offset %\"HWADDR_PRIx\"\\\\n\", __func__, offset);\n        return;\n\
+      \ \"%s: Bad offset %\"HWADDR_PRIx\"\\n\", __func__, offset);\n        return;\n\
       \    case {{ reg.size|to_offset }}:\n        s->{{ name }}{{ id }}_reserved[offset >>\
       \ 2] = val;\n        break;\n    }\n    {{ name }}{{ id }}_update(s);\n}\n\n\
       static const MemoryRegionOps {{ name }}_ops{{ id }} = {\n    .read = {{ name\
