fix unimplemented coveruptrace callback

--- a/slcore/cmdconfigs/builtin.cmd.yaml
+++ b/slcore/cmdconfigs/builtin.cmd.yaml
@@ -41,4 +41,4 @@ coverup:
     help: "Standalone - QEMU trace analysis."
     optional:
         trace: *trace
-    callback: coveruptrace
+    callback: tracecoverup
