add callstack with symbols when source is avaible

--- a/slcore/cmdconfigs/builtin.cmd.yaml
+++ b/slcore/cmdconfigs/builtin.cmd.yaml
@@ -41,4 +41,5 @@ coverup:
     help: "Standalone - QEMU trace analysis."
     optional:
         trace: *trace
+        source: {short: s, required: False, help: "Path to the OS source."}
     callback: tracecoverup
