--- a/slcore/cmdconfigs/plugins/image.cmd.yaml
+++ b/slcore/cmdconfigs/plugins/image.cmd.yaml
@@ -10,4 +10,5 @@ printcmd:
         << : *optional
         dtb: {short: dtb, required: False, help: "If the image you provide has no device tree blob,
                 you can provide a device tree blob, otherwise, ignored."}
+        source: {short: s, required: False, help: "Path to the OS source."}
     callback: bootingcmd
