--- a/slcore/database/bricktemplate/qemu.mmio.yaml
+++ b/slcore/database/bricktemplate/qemu.mmio.yaml
@@ -33,7 +33,7 @@ mmio,generic:
   get_field: ['MemoryRegion {{ name }}{{ id }}_mmio;']
   get_header: []
   get_reserved: ['uint32_t {{ name }}{{ id }}_reserved[{{ reg.size|to_hex }} >> 2];']
-  get_reset: ['s->{{ name }}{{ id }}_reserved[{{ register.offset|to_hex }}] = {{ register.value|to_hex
+  get_reset: ['s->{{ name }}{{ id }}_reserved[{{ register.offset|to_hex }} >> 2] = {{ register.value|to_hex
       }};']
   get_suite: ["static void {{ name }}{{ id }}_update(void *opaque)\n{\n    /* {{ machine_name|to_upper\
       \ }}State *s = opaque; */\n}\n\nstatic uint64_t {{ name }}{{ id }}_read(void\
