--- a/slcore/database/bricktemplate/qemu.mmio.yaml
+++ b/slcore/database/bricktemplate/qemu.mmio.yaml
@@ -33,22 +33,22 @@ mmio,generic:
   get_field: ['MemoryRegion {{ name }}{{ id }}_mmio;']
   get_header: []
   get_reserved: ['uint32_t {{ name }}{{ id }}_reserved[{{ reg.size|to_hex }} >> 2];']
-  get_reset: ['s->{{ name }}{{ id }}_reserved[{{ register.offset|to_hex }} >> 2] = {{ register.value|to_hex
-      }};']
+  get_reset: ['s->{{ name }}{{ id }}_reserved[{{ register.offset|to_hex }} >> 2] =
+      {{ register.value|to_hex }};']
   get_suite: ["static void {{ name }}{{ id }}_update(void *opaque)\n{\n    /* {{ machine_name|to_upper\
       \ }}State *s = opaque; */\n}\n\nstatic uint64_t {{ name }}{{ id }}_read(void\
       \ *opaque, hwaddr offset, unsigned size)\n{\n    {{ machine_name|to_upper }}State\
       \ *s = opaque;\n    uint32_t res = 0;\n\n    switch (offset) {\n    default:\n\
       \        qemu_log_mask(LOG_GUEST_ERROR, \"%s: Bad offset %\"HWADDR_PRIx\"\\\
       n\", __func__, offset);\n        return 0;\n    case {{ reg.size|to_offset }}:\n\
-      \        res = s->{{ name }}{{ id }}_reserved[offset >> 2];\n        break;\n    }\n\
-      \    return res;\n}\n\nstatic void {{ name }}{{ id }}_write(void *opaque, hwaddr\
-      \ offset, uint64_t val, unsigned size)\n{\n    {{ machine_name|to_upper  }}State\
-      \ *s = opaque;\n\n    switch (offset) {\n    default:\n        qemu_log_mask(LOG_GUEST_ERROR,\
+      \        res = s->{{ name }}{{ id }}_reserved[offset >> 2];\n        break;\n\
+      \    }\n    return res;\n}\n\nstatic void {{ name }}{{ id }}_write(void *opaque,\
+      \ hwaddr offset, uint64_t val, unsigned size)\n{\n    {{ machine_name|to_upper\
+      \  }}State *s = opaque;\n\n    switch (offset) {\n    default:\n        qemu_log_mask(LOG_GUEST_ERROR,\
       \ \"%s: Bad offset %\"HWADDR_PRIx\"\\n\", __func__, offset);\n        return;\n\
-      \    case {{ reg.size|to_offset }}:\n        s->{{ name }}{{ id }}_reserved[offset >>\
-      \ 2] = val;\n        break;\n    }\n    {{ name }}{{ id }}_update(s);\n}\n\n\
-      static const MemoryRegionOps {{ name }}_ops{{ id }} = {\n    .read = {{ name\
+      \    case {{ reg.size|to_offset }}:\n        s->{{ name }}{{ id }}_reserved[offset\
+      \ >> 2] = val;\n        break;\n    }\n    {{ name }}{{ id }}_update(s);\n}\n\
+      \nstatic const MemoryRegionOps {{ name }}_ops{{ id }} = {\n    .read = {{ name\
       \ }}{{ id }}_read,\n    .write = {{ name }}{{ id }}_write,\n    .endianness\
       \ = {{ endian|to_endian }},\n};"]
   parameters: [name, regs, endian]
@@ -182,6 +182,9 @@ ralink,rt3050-sysc:
   buddy_compatible: ['ralink,rt3883-sysc']
   extend: mmio,generic
 ralink,rt3883-eth:
+  buddy_compatible: []
+  extend: mmio,generic
+ralink,rt3883-pci:
   buddy_compatible: []
   extend: mmio,generic
 ralink,rt5350-eth:
