add trace command, redirect qemu output to our logger, add timeout arguments

--- a/slcore/aconfigs/builtin.a.yaml
+++ b/slcore/aconfigs/builtin.a.yaml
@@ -18,6 +18,9 @@ diagnosis:
         ShowCallstack, ShowDeadLoop,
         CheckDataAbort, CheckUndefInst, CheckTLBExcep]
     description: ''
+trace:
+    analyses: [
+        Preparation, Tracing]
 synthesis:
     analyses: [
         DTPreprocessing, SynthesisDT, Install]
