--- a/slcore/logging.yaml
+++ b/slcore/logging.yaml
@@ -13,7 +13,7 @@ handlers:
     level: DEBUG
     formatter: simple
     encoding: utf8
-    mode: w
+    mode: a
 root:
   level: INFO
   handlers: [console, file]
