update trace default timeout and description

--- a/slcore/aconfigs/builtin.a.yaml
+++ b/slcore/aconfigs/builtin.a.yaml
@@ -21,6 +21,7 @@ diagnosis:
 trace:
     analyses: [
         Preparation, Tracing]
+    description: ''
 synthesis:
     analyses: [
         DTPreprocessing, SynthesisDT, Install]
