--- a/slcore/aconfigs/builtin.a.yaml
+++ b/slcore/aconfigs/builtin.a.yaml
@@ -13,6 +13,7 @@ tracecoverup:
     description: ''
 diagnosis:
     analyses: [
+        CheckBoard,
         DTPreprocessing, SynthesisDT, Install,
         Preparation, Tracing,
         LoadTrace,
