we cannot use fix loading address && update trace checking output

--- a/slcore/aconfigs/builtin.a.yaml
+++ b/slcore/aconfigs/builtin.a.yaml
@@ -15,7 +15,7 @@ diagnosis:
     analyses: [
         CheckBoard,
         DTPreprocessing, SynthesisDT, Install,
-        Preparation, Tracing,
+        CalcLoadAddr, Preparation, Tracing,
         LoadTrace,
         CheckUserLevel,
         CheckMissingCode,
